Fixed overlap on former trainee

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -566,8 +566,10 @@ h4 {
     .trainee-container {
       .photo-container {
         .photo {
-          width: 320px;
-          height: 320px;
+          // width: 320px;
+          // height: 320px;
+          width: 100%;
+          height: 100%;
         }
       }
 
@@ -594,7 +596,7 @@ h4 {
 
   .working-brands-container {
     height: 380px;
-    padding: 84px 15% 84px 15%;
+    padding: 84px 13.88% 84px 13.88%;
     margin-top: 30px;
 
     .brand-container {
